config/output-skaffold/gateway-nbmp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "999999"
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: gateway-nbmp
    app.kubernetes.io/component: gateway-nbmp
    app.kubernetes.io/created-by: nagare-media-engine
    app.kubernetes.io/part-of: nagare-media-engine
    app.kubernetes.io/managed-by: kustomize
  name: gateway-nbmp
  namespace: system
spec:
  rules:
    - host: engine.nagare.local.gd
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-nbmp
                port:
                  name: http
